Let's remove previews... I'm not using them.